@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.7
+Release: 0.8
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -482,6 +482,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Jan 19 2004 Jeff Johnson <jbj@jbj.org> 4.2-0.8
+- python: return None for NEVRAO, [] for everything else.
+
 * Mon Jan 12 2004 Jeff Johnson <jbj@redhat.com> 4.3-0.7
 - fix: handle files w/o contexts correctly.
 
